# simple-weather

./: CMakeLists.txt  builder.ui  readme.md
src/: main.c  properties.h
src/gtk/: gtk_callbacks.h  mainwindow_callbacks.c  settings_callback.c
src/requests/: curl.h  curl_base.c  owm.c  owm.h
src/signals/: signals_handlers.c  signals_handlers.h
